- changed main menu overlay to be fixed, scroll with window when too tall, and overlay content - fixed main menu overlay for large screens

--- a/assets/sass/cmu/cmuOverlay/modules/_cmuOverlayModule.scss
+++ b/assets/sass/cmu/cmuOverlay/modules/_cmuOverlayModule.scss
@@ -6,7 +6,7 @@
 .cmuWrapper--overlay {
 	// JS has been changed; this is now applied to doc.body
 	.cmuWrapper {
-		height: 300px;
+		// height: 300px;
 		// height: 100%;
 		overflow: hidden;
 	}
@@ -20,7 +20,7 @@
 div.cmuOverlay--show {
 	display: block;
 	opacity: 1;
-	overflow: scroll;
+	// overflow: scroll;
     height: 100%; // keeps everything in screen
 	@extend %ease-fast;
 	
